--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="question"></div>
         <ul id="choices"></ul>
       </div>
-      <div id="timeRemaining">Remaining Time: <span>00:00</span></div>
+      <div id="timeRemaining"><span>02:00</span></div>
       <button id="nextButton" class="button-primary">Answer</button>
     </div>
 
